--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
     <title>Resume</title>
 </head>
 <body>
-    <h1>Resume</h1>
-    <h2>Pradeep G</h2>
-    <p>4/9,sengaimedu(vill),dalavoi(po),ariyalur(dt)621730</p>
-    <a href="mailto:pradeepguna4521@gmail.com"><span>Email:</span>pradeepguna4521@gmail.com</a>
-    <a href="tel:+917339533257"><span>Hand Phone:</span>7339533257</a>
+    <h1 class="heading">RESUME</h1>
+    <h2><u>Pradeep G</u></h2>
+    <p class="address">4/9,
+       <br> sengaimedu(vill),
+       <br> dalavoi(po),
+       <br>ariyalur(dt)
+       <br>621730</p>
+
+    Email :<a href="mailto:pradeepguna4521@gmail.com">pradeepguna4521@gmail.com</a>
+    <br>
+    Hand Phone:<a href="tel:+917339533257">7339533257</a>
     <hr>
-    <h2>Objective:</h2>
+    <h2><u>Objective:</u></h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, dolorem ducimus neque, repellendus error, quaerat inventore velit soluta aperiam voluptatibus eius fuga rerum. Exercitationem ad eum accusantium nisi voluptatem harum?+</p>
-    <h2>Education Qualification :</h2>
-    <table>
+    <h2><u>Education Qualification :</u></h2>
+    <table border="1px">
         <tr>
             <th>S.NO</th>
             <th>DEGREE</th>
@@ -46,27 +52,27 @@
             <td>90%</td>
         </tr>
     </table>
-    <h2>
-        Additional Cetrificate:
+    <h2 class="add">
+        <u>Additional Cetrificate:</u>
     </h2>
-    <ul>
+    <ul style="list-style:disc;">
         <li>FrontEnd in udmey</li>
         <li>React in udmey</li>
         <li>Javascript</li>
     </ul>
     <h2>
-        Expremental Learning: 
+        <u>Expremental Learning:</u> 
     </h2>
     <ul>
         <li>2 month web development intern in onfleek</li>
     </ul>
-    <h2>Area of Interset:</h2>
+    <h2><u>Area of Interset:</u></h2>
     <ul>
         <li>web development</li>
         <li>ui/ux</li>
         <li>Blockchain development</li>
     </ul>
-    <h2>personal Skills:</h2>
+    <h2><u>Personal Skills:</u></h2>
     <ul>
     <li>html,css,Javascript</li>
     <li>React,bootstrap</li>
@@ -74,14 +80,14 @@
     <li>Git & Github</li>
     <li> MongoDB</li>
 </ul>
-<h2>porjects :</h2>
+<h2 ><u>Porjects :</u></h2>
 <ul>
     <li>Crud Operation using mern-stack </li>
     <li>Tingtong website</li>
     <li>node porjects</li>
 </ul>
-<h2>personal Detials :</h2>
-<table>
+<h2 class="porjects"><u>Personal Detials :</u></h2>
+<table style="border-collapse: collapse; text-align: left; margin-left: 20px;">
     <tr>
         <td>Name</td>
         <td>: Pradeep</td>
@@ -111,7 +117,7 @@
         <td>: Tamil,English</td>
     </tr>
 </table>
-<h2>DECLARATION :</h2>
-<p> I hereby decalre thet the info is true to the best of my Knowledge</p>
+<h2><u>DECLARATION :</u></h2>
+<p class="end"> I hereby decalre thet the info is true to the best of my Knowledge</p>
 </body>
 </html>
